fix(console): align added sign-in method with table head content

--- a/packages/console/src/components/Transfer/index.module.scss
+++ b/packages/console/src/components/Transfer/index.module.scss
@@ -35,6 +35,7 @@
 
           > svg {
             margin-right: _.unit(2);
+            margin-left: -5px; // use to align svg content with text
           }
 
           &:hover {
